--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                     </div>
                     <div class="col-sm-12 col-md-2">
                         <div class="wrapper-login-input" onclick="redirectTologin()">
-                            <a href="#" class="login mt-2">Login</a>
+                            <a href="#" class="login mt-2" target="_blank">Login</a>
                         </div>
                         <div class="wrapper-signup-input" onclick="redirectToSignUp()">
-                            <a href="#" class="signup">Signup</a>
+                            <a href="#" class="signup" target="_blank">Signup</a>
                         </div>
                     </div>
                 </div>
